--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@rocketseat/eslint-config": "^2.2.2",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.2",
+    "@typescript-eslint/parser": "^8.18.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
